--- a/sales.html
+++ b/sales.html
@@ -33,7 +33,21 @@
            <li>8. Energy kJ 1902kJ/100g	1902kJ/100g	</li>
            
        </ul>
-       <h style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; color: rgb(240, 55, 9);">This some information about sales :</h>
+     <!--------------------------------------------------->
+      <label style="margin-right: 127.63px; color: blueviolet;" for="input">Shop name : </label>
+      <input style="background-color: rgb(27, 215, 240);color: wheat;" id="input" type="text"><br>
+
+      <label style="margin-right: 66.3px; color: blueviolet;" for="input1">Minimum customers : </label>
+      <input style="background-color: rgb(26, 164, 219);color: wheat;"id="input1" type="number"><br>
+
+      <label style="margin-right: 63.65px; color: blueviolet;" for="input2">Maximum customers : </label>
+      <input style="background-color: rgb(30, 174, 210);color: wheat;"id="input2" type="number"><br>
+
+      <label style="color: blueviolet;" for="input3">Average cookies per customers : </label>
+      <input style="background-color: rgb(12, 201, 248);color: wheat;" id="input3" type="number"><br>
+<button style="background-color: tomato;color: white;" id="button">submit</button><br>
+<!------------------------------------------------------>
+             <h style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; color: rgb(240, 55, 9);">This some information about sales :</h>
         <br>
        <table style="background-color: chocolate; border:2px solid black ; width: 300px;" id="table"></table>
 <br>
